Updated index.html with HTML comment

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Web Technologies</title>
+    <title>Web Technologies</title>
 </head>
 <body>
-<h1>Welcome to Web Technologies Course ( Yaseen khan "Section C" )</h1>
+
+    <!-- This is my first HTML page for Lab 01 -->
+
+    <h1>Welcome to Web Technologies Course"Yaseen khan (Section C)</h1>
+
 </body>
 </html>
